# oxidclean

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: scan_benchmark.rs
docs/: COVERAGE.md
docs/en/: INSTALL.md  TROUBLESHOOTING.md  USAGE.md
docs/pt/: INSTALL.md  TROUBLESHOOTING.md  USAGE.md
scripts/: coverage.sh
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: analyzer.rs  cache_manager.rs  cleaner.rs  mod.rs  scanner.rs  validator.rs
src/dal/: config.rs  logger.rs  mod.rs  pacman_config.rs  pacman_db.rs
src/models/: config.rs  dependency.rs  mod.rs  package.rs  report.rs
src/utils/: disk_usage.rs  mod.rs  permissions.rs  progress.rs  system_info.rs  terminal.rs
tests/: integration_tests.rs
tests/integration/: cli_test.rs  mod.rs  scanner_test.rs
