[package]
name = "oxidclean"
version = "0.1.0"
edition = "2021"
authors = ["OxidClean Contributors"]
description = "Gerenciador de pacotes órfãos do Arch Linux - otimizador de dependências e limpador de espaço"
license = "MIT"
repository = "https://github.com/oxidclean/oxidclean"
keywords = ["arch-linux", "pacman", "package-manager", "cleanup", "orphan"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "oxidclean"
path = "src/main.rs"

[lib]
name = "oxidclean"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
comfy-table = "7.1"
dialoguer = "0.11"
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# File System & IO
walkdir = "2.5"
dirs = "5.0"
terminal_size = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async/Parallel
rayon = "1.10"

# System Integration
nix = { version = "0.29", features = ["user"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "scan_benchmark"
harness = false
